﻿- Sliders now correctly display out-of-range values


Version 0.9.4.2 -

- Fix map tree replacement sometimes displaying prop lists


Version 0.9.4.1 -

- Fix exception when loading replacement config file with conflicting added prop references


Version 0.9.4 -

- Major new feature: add props to network prefabs
- Add lane selection when using individual replacement mode on networks
- Options panel now automatically refreshes on language change
- Return hotkey handling to UUI


Version 0.9.3.1 -

- Fix NullReferenceException with added prop detection for buildings with no intial props


Version 0.9.3 -

- Major new feature: add props to building prefabs
- Add hotkey to toggle disabling of vanilla tree tool
- Ensure 'copy current configuration' button is disabled when not in-game


Version 0.9.2 -

- New feature: option to disable vanilla tree tool network tree replacement (no more snapping to networks)


Version 0.9.1 -

- New feature: combined prop/tree mode - replace props (in buildings or networks) with trees, or vice-versa
- The spacing of repeated network trees/props can now be adjusted (individual mode only)
- BOB tool now recognises the underground (PageDown/PageUp to switch)
- Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
- Prop/tree position highlighting is dimmed when shift is pressed and disabled while Alt is pressed
- Random prop list now refreshes if displayed when random prop setup panel is closed
- Fix building sliders not resetting to original positions when building preview is reverted
- Fix preview rotation resetting if position changes are made immediately after applying a rotation change
- Update bundled UUI API (2.2.1)


Version 0.9.0.4 -

- Mirrored network props now also mirror their rotation
- Fix preview sometimes showing incorrect prop angles
- Fix building prop list sometimes not showing original prop name


Version 0.9.0.3 -

- Fix network replacement original prefab regression

