@@ -1,4 +1,5 @@
-﻿- Sliders now correctly display out-of-range values
+﻿- Implement customizable repeat distances for added network props
+- Sliders now correctly display out-of-range values
 
 
 Version 0.9.4.2 -
